--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Titre de ma page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, minus! Velit praesentium minus reprehenderit ea explicabo repellendus atque nam accusantium consequatur tenetur ipsam aperiam excepturi consectetur sequi, modi quod corporis.</p>
 </body>
 </html>
