--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Lanterne Papier</title>
 </head>
 <body>
-    <h1>Titre de ma page</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, minus! Velit praesentium minus reprehenderit ea explicabo repellendus atque nam accusantium consequatur tenetur ipsam aperiam excepturi consectetur sequi, modi quod corporis.</p>
+    
+    <h1>Lanterne de papier</h1>
+    <div class="bouton_1">
+        <p>Lanternes chinoises</p>
+    </div>
+    <div class="bouton_2">
+        <p>Rosaces</p>
+    </div>
+    <div class="bouton_3">
+        <p>Alvéoles</p>
+    </div>
+    <div class="bouton_4">
+        <p>Etoiles</p>
+    </div>
+
 </body>
 </html>
