--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="bouton_4">
             <p>Etoiles</p>
         </div>
-        <img src="lanterne.jpg" alt="lanterne papier">
+        <img src="lanterne.jpg" alt="lanterne_papier">
 
     </body>
 </html>
