--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     
-        <h1>Lanterne de papier</h1>
+        <h1>Lanterne de papierxqs</h1>
         <div class="bouton_1">
             <p>Lanternes chinoises</p>
         </div>
