--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <p>Etoiles</p>
         </div>
         <img src="lanterne.jpg" alt="lanterne_papier">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aut cum magni molestias, facere voluptatum exercitationem voluptate consequuntur distinctio sunt voluptatibus praesentium incidunt totam blanditiis dicta sequi id sint accusamus?</p>
 
     </body>
 </html>
