--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         </div>
         <img src="lanterne.jpg" alt="lanterne_papier">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aut cum magni molestias, facere voluptatum exercitationem voluptate consequuntur distinctio sunt voluptatibus praesentium incidunt totam blanditiis dicta sequi id sint accusamus?</p>
-
+        <footer>
+            <p>ddhsdjksqhdjqshjdqskdhqjksdkjqsdhqkjsdqskjdqskdhqjs</p>
+        </footer>
     </body>
 </html>
