branche fork modif h2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
     
         <h1>Lanterne de papierxqs</h1>
+        <h2>mais pas que</h2>
         <div class="bouton_1">
             <p>Lanternes chinoises</p>
         </div>
