changement de soo

--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
         <img src="lanterne.jpg" alt="lanterne_papier">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aut cum magni molestias, facere voluptatum exercitationem voluptate consequuntur distinctio sunt voluptatibus praesentium incidunt totam blanditiis dicta sequi id sint accusamus?</p>
 
+
+        <footer>
+            <p>SOO a ajoute des choses ici</p>
+            <p>on va voir</p>
+        </footer>
+
     </body>
 </html>
