the final change

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <title>Lanterne Papier</title>
     </head>
     <body>
-    
-        <h1>Lanterne de papierxqs</h1>
+        <h1>Lanterne de papier</h1>
         <div class="bouton_1">
             <p>Lanternes chinoises</p>
         </div>
