Alignements & parler la France

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     </head>
     <body>
     
-        <h1>Lanterne de papierxqs</h1>
+        <h1>Lanterne en papier</h1> <!-- Ca parle la France ici -->
         <div class="bouton_1">
             <p>Lanternes chinoises</p>
         </div>
@@ -23,7 +23,7 @@
             <p>Etoiles</p>
         </div>
         <img src="lanterne.jpg" alt="lanterne_papier">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aut cum magni molestias, facere voluptatum exercitationem voluptate consequuntur distinctio sunt voluptatibus praesentium incidunt totam blanditiis dicta sequi id sint accusamus?</p>
+        <p class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aut cum magni molestias, facere voluptatum exercitationem voluptate consequuntur distinctio sunt voluptatibus praesentium incidunt totam blanditiis dicta sequi id sint accusamus?</p>
 
     </body>
 </html>
